# cpp-quaternion

./: CMakeLists.txt  README.md
include/: quaternion.h
src/: algebraic-exception.cpp  quaternion.cpp
tests/quaternion/: conjugate.cpp  norm.cpp  normalize.cpp  orthogonal.cpp  scalar-product.cpp  scale.cpp  sum-subtract.cpp  vector-product.cpp
